# crewai-demo

./: .gitignore  .pre-commit-config.yaml  README.md  aggregate_output.txt  docker-compose.yml  generalist_output.txt  requirements-dev.txt  requirements.txt  research_output.txt  stored_output.txt  synthesize_output.txt
.chroma-local/: chroma.sqlite3
.devcontainer/: devcontainer.json
.github/workflows/: python.yaml
backend/: Dockerfile  MANIFEST.in  db.sqlite3  manage.py  pyproject.toml  pytest.ini  setup.cfg
backend/app/: __init__.py  admin.py  apps.py  models.py  serializers.py  tasks.py  tests.py  views.py
backend/app/migrations/: 0001_initial.py  0002_alter_customuser_groups_alter_customuser_is_active.py
backend/app/models/: user_models.py
backend/app/pydantic_models/: user_models.py
backend/app/routers/: analysis_router.py  crewai_router.py  research_analysis_router.py  task_status_router.py
backend/app/services/: custom_memory_manager.py  resume_storage_service.py  tools.py  vector_store.py
backend/app/tools/: aisearch_tool.py  crewai_tools.py  current_date_tool.py  direct_answer_tool.py  document_analysis_tool.py  image_analysis_tool.py  job_parser_tool.py  resume_parser_tool.py  summarize_tool.py  web_search_tool.py
backend/crewai_backend/: __init__.py  asgi.py  celery.py  config.py  settings.py  urls.py  wsgi.py
backend/crewai_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/crewai_config/: agents.yaml  config.py  crew.py  knowledge_sources.py  tasks.yaml
backend/crewai_config/config/: agents.yaml  tasks.yaml
backend/dependencies/: db.py
backend/tests/: conftest.py  test_agent_configs.py  test_chat_endpoint.py.py  test_embedding_generation.py  test_views.py  testing_Crew.py  testing_chroma_store.py  testing_llm.py  tests_agent_configs.py  tests_chroma_store.py  tests_embedding_generation.py  tests_llm.py  wip_test_chat_endpoint.py  wip_tests_Crew.py
frontend/: .gitignore  DockerFile  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/analysis/: route.ts
frontend/app/api/chat/: route.ts
frontend/app/chat/: page.tsx
frontend/components/: AgentStepsAccordion.tsx  ChatBot.tsx  agent-workflow.tsx  collapsible-markdown.tsx  final-analysis.tsx  futuristic-thinking.tsx  link-slider.tsx  message-block.tsx  search-bar.tsx  search-results.tsx  thinking-dots.tsx
frontend/components/ui/: alert.tsx  badge.tsx  breadcrumb.tsx  button.tsx  calendar.tsx  carousel.tsx  input.tsx  use-toast.tsx
